--- a/R/main.Rmd
+++ b/R/main.Rmd
@@ -1,4 +1,10 @@
+---
+title: "main"
+output: html_document
+---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 # Install CRAN packages
 list.of.packages <- c(
   "data.table",
@@ -19,12 +25,38 @@ library(lubridate)
 library(plotly)
 library(leaflet)
 library(geosphere)
+```
 
+# Exploratory Data Analysis
+
+## Descriptive Statistics
+The zipped files were downloaded manually from the link provided and decompressed.
+
+```{r}
+trip_fare <- fread('../Data/trip_fare_4.csv')
+trip_data <- fread('../Data/trip_data_4.csv')
+
+summary(trip_fare)
+summary(trip_data)
+```
+
+
+## Merge two datasets
+
+Let's merge the two datasets to create a single dataset containing all the information.  
+Since the data does not comes with a data dictionary, we will try to define the primary key for the two datasets.  
+
+* medallion
+* hack_license
+* vendor_id
+* pickup_datetime
+
+Based on the primary keys, we will identify if we have duplicates in the two datasets before merging them.
+
+```{r eval=FALSE}
 ###########################################
 # Prepare sample dataset
 
-trip_fare <- fread('Data/trip_fare_4.csv')
-trip_data <- fread('Data/trip_data_4.csv')
 
 join_keycols <- names(trip_fare)[1:4]
 setkeyv(trip_fare, join_keycols)
@@ -41,7 +73,6 @@ uniqueN(trip_fare)
 
 trip_fare <- unique(trip_fare, by = key(trip_fare))
 
-
 trip_data[,.N]
 #15100468
 
@@ -52,106 +83,39 @@ uniqueN(trip_data)
 
 trip_data <- unique(trip_data, by = key(trip_fare))
 
-
 trip_combined <- trip_fare[trip_data, nomatch = 0]
 trip_combined[, .N]
 #15101772
+```
 
-uniqueN(trip_combined)
-#15101654
+Since the dataset is large and resources are limited, we will work with a sample of the data instead of the entire dataset. Here we are taking a random sample of 10% of the entire dataset. Seed is set before taking the sample to make sure the results are reproducible.
 
+```{r eval=FALSE}
 set.seed(131)
 trip_combined[, sample_flg := sample(c(TRUE, FALSE), size = .N, replace = TRUE, prob = c(0.1, 0.9))]
 
 trip_combined_sample <- trip_combined[sample_flg == T]
 
-fwrite(trip_combined_sample, 'Data/trip_combined_sample.csv')
+#fwrite(trip_combined_sample, 'Data/trip_combined_sample.csv')
 ###########################################
+```
 
+
+
+```{r eval=FALSE, include=FALSE}
 trip_combined_sample <- fread('Data/trip_combined_sample.csv.gz')
 
-# Missing data
-glimpse(trip_combined_sample)
+hist(trip_combined_sample$passenger_count)
 
-# Let's convert date strings to date time format
-trip_combined_sample[, pickup_datetime := as.POSIXct(pickup_datetime,format="%Y-%m-%d %H:%M:%OS")]
-trip_combined_sample[, dropoff_datetime := as.POSIXct(dropoff_datetime,format="%Y-%m-%d %H:%M:%OS")]
-
-summary(trip_combined_sample)
-
-# One month of data from April 2013
-
-# Lets remove the null values from lat and long
-trip_combined_sample <- trip_combined_sample[!is.na(dropoff_longitude) & !is.na(dropoff_latitude)]
-
-# Also, looking at the range of the values of lat and long, it appears the data is either incorrect or captured in a different format
-# Assuming lat and long are in degrees. For our analysis we will remove an erroneous data
-
-# Lat long range (lat from -90 to 90 and long from -180 to 180)
-
-trip_combined_sample <- trip_combined_sample[pickup_latitude %between% c(-90, 90) & pickup_longitude %between% c(-180, 180)]
-trip_combined_sample <- trip_combined_sample[dropoff_latitude %between% c(-90, 90) & dropoff_longitude %between% c(-180, 180)]
-
-summary(trip_combined_sample$pickup_latitude)
-summary(trip_combined_sample$pickup_longitude)
-summary(trip_combined_sample$dropoff_latitude)
-summary(trip_combined_sample$dropoff_longitude)
-
-# Since we are dealing with New York data, the lat and long can further be limited to New York and nearby 
-
-# outlier analysis
-
-hist(trip_combined_sample$pickup_latitude)
-ggplot(trip_combined_sample, aes(x="pickup_latitude", y=pickup_latitude))+geom_boxplot()
-
-# We know that NYC is in northern hemisphere. Some of the pickups are from equator (latitude = 0) and some are from southern hemisphere
-# Clearly data is wrongly captured or there were errors in capturing the data
-
-hist(trip_combined_sample$pickup_longitude)
-ggplot(trip_combined_sample, aes(x="pickup_longitude", y=pickup_longitude))+geom_boxplot()
-
-
-hist(trip_combined_sample$dropoff_latitude)
-ggplot(trip_combined_sample, aes(x="dropoff_latitude", y=dropoff_latitude))+geom_boxplot()
-
-hist(trip_combined_sample$dropoff_longitude)
-ggplot(trip_combined_sample, aes(x="dropoff_longitude", y=dropoff_longitude))+geom_boxplot()
-
-
-# NYC range within 1000 kms radius (1 degree equal appox 111 kms) and NYC coordinates are 40.7141667 lat and -74.0063889 long
-trip_combined_sample <- trip_combined_sample[pickup_latitude %between% c(30, 50) & pickup_longitude %between% c(-84, -64)]
-trip_combined_sample <- trip_combined_sample[dropoff_latitude %between% c(30, 50) & dropoff_longitude %between% c(-84, -64)]
-
-
-trip_combined_sample[, .N]
-boxplot.stats(trip_combined_sample$pickup_longitude)
-
-# Let's visualize the lat longs
-
-ggplot(head(trip_combined_sample, 1000), aes(x=pickup_longitude, y= pickup_latitude)) +
-  geom_point()
-
-leaflet(data = head(trip_combined_sample, 1000)) %>%
-  addTiles()%>%
-  #addProviderTiles("Stamen.TonerLite")%>%
-  #addProviderTiles("Esri.NatGeoWorldMap") %>%
-  addCircleMarkers(~ pickup_longitude, ~pickup_latitude, radius = 1,
-                   color = "navy", fillOpacity = 0.3)
-
-
-# Remove zero distance trips
-
-summary(trip_combined_sample)
-trip_combined_sample <- trip_combined_sample[trip_distance > 0]
-
-# Remove zero time trips
-trip_combined_sample <- trip_combined_sample[trip_time_in_secs > 0]
-
-hist(trip_combined_sample$trip_time_in_secs)
-
-hist(trip_combined_sample$fare_amount)
-
-trip_combined_sample[fare_amount>=500]
+# p1 <- trip_data %>%
+#   group_by(passenger_count) %>%
+#   count() %>%
+#   ggplot(aes(passenger_count, n, fill = passenger_count)) +
+#   geom_col() +
+#   scale_y_sqrt() +
+#   theme(legend.position = "none")
+# 
+# p1
 
 trip_combined_sample$passenger_count <- as.factor(trip_combined_sample$passenger_count)
 p1_sample <- trip_combined_sample %>%
@@ -164,6 +128,28 @@ p1_sample <- trip_combined_sample %>%
 
 p1_sample
 
+# summary(trip_combined_sample)
+# ggplot(data=trip_combined_sample, aes(x=passenger_count)) + 
+#   geom_histogram(breaks=seq(0, 10, by=1), 
+#                  col="red", 
+#                  fill="green", 
+#                  alpha = .2) + 
+#   labs(title="Histogram for Passenger Count", x="Passenger Count", y="Count") + 
+#   xlim(c(-1,10)) 
+#+ 
+#  ylim(c(0,30))
+
+# 
+# p4 <- trip_data %>%
+#   mutate(wday = wday(pickup_datetime, label = TRUE)) %>%
+#   group_by(wday, vendor_id) %>%
+#   count() %>%
+#   ggplot(aes(wday, n, colour = vendor_id)) +
+#   geom_point(size = 4) +
+#   labs(x = "Day of the week", y = "Total number of pickups") +
+#   theme(legend.position = "none")
+# 
+# p4
 
 
 trip_combined_sample$payment_type <- as.factor(trip_combined_sample$payment_type)
@@ -344,6 +330,56 @@ p6_sample <- trip_combined_sample %>%
 p6_sample
 
 
+trip_data
+
+
+trip_combined_sample[, .N]
+
+hist(trip_combined_sample$pickup_latitude)
+
+
+ggplot(head(trip_combined_sample, 1000), aes(x=pickup_longitude, y= pickup_latitude), size=2200) +
+  geom_point()
+
+
+#plot_ly(data = trip_combined_sample, x = ~pickup_longitude, y = ~pickup_latitude)
+
+# oultier analysis
+
+ggplot(trip_combined_sample, aes(x="pickup_latitude", y=pickup_latitude))+geom_boxplot()
+
+# Lat long range
+trip_combined_sample <- trip_combined_sample[pickup_latitude %between% c(-90, 90) & pickup_longitude %between% c(-180, 180)]
+trip_combined_sample[, .N]
+
+# NYC range within 1000 kms radius
+trip_combined_sample <- trip_combined_sample[pickup_latitude %between% c(30, 50) & pickup_longitude %between% c(-84, -64)]
+
+
+ggplot(trip_combined_sample, aes(x="pickup_longitude", y=pickup_longitude))+geom_boxplot()
+
+boxplot.stats(trip_combined_sample$pickup_longitude)
+ggplot(head(trip_combined_sample, 1000), aes(x=pickup_longitude, y=pickup_latitude), size = 0.5)+geom_point()
+
+summary(trip_combined_sample)
+
+
+leaflet(data = head(trip_combined_sample, 1000)) %>%
+  addTiles()%>%
+  #addProviderTiles("Stamen.TonerLite")%>%
+  #addProviderTiles("Esri.NatGeoWorldMap") %>%
+  addCircleMarkers(~ pickup_longitude, ~pickup_latitude, radius = 1,
+                   color = "navy", fillOpacity = 0.3)
+
+# Missing data
+
+summary(trip_combined_sample)
+trip_combined_sample <- trip_combined_sample[!is.na(dropoff_longitude) & !is.na(dropoff_latitude)]
+
+# Remove zero distance trips
+
+trip_combined_sample <- trip_combined_sample[trip_distance > 0]
+
 
 # Mean Fare amount and mean distance
 trip_combined_sample[ , .(mean(fare_amount), mean(trip_distance)), by = list(passenger_count)]
@@ -398,16 +434,8 @@ ggplot(plot_mean_time_fare) +
 
 trip_combined_sample[, list(pickup_longitude, pickup_latitude)]
 trip_combined_sample$pickup_dist_from_city <- distm(trip_combined_sample[,list(pickup_longitude, pickup_latitude)], nyc, fun = distHaversine)
-?distm
-hist(trip_combined_sample[pickup_dist_from_city<25000]$pickup_dist_from_city)
 
-summary(trip_combined_sample)
+hist(trip_combined_sample$pickup_dist_from_city)
 
-trip_combined_sample <- trip_combined_sample[pickup_dist_from_city<100000]
-trip_combined_sample[, .N]
+```
 
-trip_combined_sample$fare_amount
-
-ggplot(head(trip_combined_sample, 50000)) +
-  geom_point(aes(x=pickup_dist_from_city, y=trip_distance, col = fare_amount)) +
-  scale_color_gradientn(colours = rainbow(5))
